Fixed spacing issue between tabs

--- a/static/css/winedora.css
+++ b/static/css/winedora.css
@@ -638,7 +638,6 @@ footer .container .navbar {
   box-shadow:0px -1px 3px rgb(209,211,212), 0px -1px 3px rgb(209,211,212);
   width: 100px;
   text-align: center;
-  margin-left:43px;
 }
 
 .nav-tabs-clean {
